Fixing jump to top button

--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -357,3 +357,14 @@ pwa-update::part(offlineToast) {
         }
     }
 }
+
+#back-to-top-wrapper {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    /* z-index: 99999; */
+
+    @include media-breakpoint-up(lg) {
+        right: 2rem;
+    }
+}
