--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -38,15 +38,4 @@
     .pages {
         text-transform: capitalize;
     }
-
-    #back-to-top-wrapper {
-        position: fixed;
-        right: 1rem;
-        bottom: 1rem;
-        /* z-index: 99999; */
-
-        @include media-breakpoint-up(lg) {
-            right: 2rem;
-        }
-    }
 }
